@@ -1,4 +1,5 @@
 Current
+Fixed: GITHUB-2296: assertEquals doesn't work for sets as order is not guaranteed. (Prashant Maroti)
 Fixed: GITHUB-1632: throwing SkipException sets iTestResult status to Failure instead of Skip (Julien Herr & Krishnan Mahadevan)
 New  : GITHUB-2456: Add onDataProviderFailure listener (Krishnan Mahadevan)
 Fixed: GITHUB-2445: NPE in FailedReporter.java With Tests Created in Factory (Arham Jain)
